--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.8.1
+dj-database-url==0.5.0
 Django==4.2.13
 django-allauth==0.63.2
 django-countries==7.6.1
 django-crispy-forms==1.14.0
 pillow==10.3.0
+psycopg2==2.9.9
 sqlparse==0.5.0
 stripe==10.2.0
