--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ django-countries==7.6.1
 django-crispy-forms==1.14.0
 pillow==10.3.0
 psycopg2==2.9.9
+python-dotenv==1.0.1
 sqlparse==0.5.0
 stripe==10.2.0
