--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==4.2.13
 django-allauth==0.63.2
 django-countries==7.6.1
 django-crispy-forms==1.14.0
+gunicorn==22.0.0
 pillow==10.3.0
 psycopg2==2.9.9
 python-dotenv==1.0.1
