--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 asgiref==3.8.1
+boto3==1.34.144
+botocore==1.34.144
 dj-database-url==0.5.0
 Django==4.2.13
 django-allauth==0.63.2
 django-countries==7.6.1
 django-crispy-forms==1.14.0
+django-storages==1.14.4
 gunicorn==22.0.0
+jmespath==1.0.1
 pillow==10.3.0
 psycopg2==2.9.9
 python-dotenv==1.0.1
+s3transfer==0.10.2
 sqlparse==0.5.0
 stripe==10.2.0
